Fix status shifting on VSR individual page

--- a/frontend/src/components/VSRIndividual/PageSections/CaseDetails/styles.module.css
+++ b/frontend/src/components/VSRIndividual/PageSections/CaseDetails/styles.module.css
@@ -13,6 +13,17 @@
   opacity: 0.5;
 }
 
+.statusWrapper {
+  min-width: 230px;
+}
+
+/* tablet version */
+@media screen and (max-width: 850px) {
+  .statusWrapper {
+    min-width: 190px;
+  }
+}
+
 /* mobile version */
 @media screen and (max-width: 550px) {
   .details {
